# linoctree-benchmark

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
benchmarks/: config_template.yaml
cmake/: CMakeBuildExec.cmake  CMakeConfig.cmake  CMakeLibraries.cmake  CMakeSources.cmake  FindLinearOctree.cmake
cmake/modules/: FindLASLIB.cmake  FindLinOctree.cmake  FindPCL.cmake  FindPapi.cmake  FindPicotree.cmake
inc/: build_log_ext.hpp  encoding_log_ext.hpp  main_options.hpp
inc/benchmarking/: enc_build_benchmarks.hpp  memory_benchmarks.hpp  neighbor_benchmarks.hpp  yaml_config.hpp
inc/structures/: octree_logged.hpp  unibn_octree.hpp
plots/: plots.py  plots_benchmarks.ipynb  plots_clouds.ipynb  plots_locality.ipynb  utils.py
scripts/: README.md  bench_locality.bash  bench_memory.bash  install_all.sh  install_eigen3.sh  install_laslib.sh  install_papi.sh  install_pcl.sh  install_picotree.sh
src/: main.cpp  main_options.cpp  octree_logged.cpp  time_watcher.cpp  yaml_config.cpp
tests/: CMakeLists.txt  test_yaml_config.cpp
